_generated-doc/2.7/config/quarkus-config-group-logging-category-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-config-group-logging-category-config_quarkus.log.categories-logging-categories]]link:#quarkus-config-group-logging-category-config_quarkus.log.categories-logging-categories[Logging categories]

h|Type
h|Default

a| [[quarkus-config-group-logging-category-config_quarkus.log.category.-categories-.level]]`link:#quarkus-config-group-logging-category-config_quarkus.log.category.-categories-.level[quarkus.log.category."categories".level]`

[.description]
--
The log level for this category. Note that to get log levels below `INFO`, the minimum level build time configuration option needs to be adjusted as well.
--|InheritableLevel 
|`inherit`


a| [[quarkus-config-group-logging-category-config_quarkus.log.category.-categories-.handlers]]`link:#quarkus-config-group-logging-category-config_quarkus.log.category.-categories-.handlers[quarkus.log.category."categories".handlers]`

[.description]
--
The names of the handlers to link to this category.
--|list of string 
|


a| [[quarkus-config-group-logging-category-config_quarkus.log.category.-categories-.use-parent-handlers]]`link:#quarkus-config-group-logging-category-config_quarkus.log.category.-categories-.use-parent-handlers[quarkus.log.category."categories".use-parent-handlers]`

[.description]
--
Specify whether or not this logger should send its output to its parent Logger
--|boolean 
|`true`

|===